# django-kafka-consumer

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  tox.ini
.github/workflows/: python-publish.yml  test-package.yml
kafka_consumer/: admin.py  connection_cleaning.py  consumer.py  exceptions.py  fields.py  managers.py  models.py  settings.py  utils.py
kafka_consumer/locale/en/LC_MESSAGES/: django.po
kafka_consumer/locale/pl/LC_MESSAGES/: django.po
kafka_consumer/management/commands/: consume.py  consume_junk_messages.py
kafka_consumer/messages/: __init__.py  base.py  dispatcher.py  processors.py
kafka_consumer/migrations/: 0001_initial.py
kafka_consumer/subscribers/: base.py
kafka_consumer/tests/: helpers.py  test_base_subscriber.py  test_batch_processor.py  test_consume_command.py  test_junk_message.py  test_message_dispatcher.py
testproject/: manage.py  runtests.py  settings.py
